@@ -8,7 +8,7 @@ e_util_set_env(char *variable, char *content)
    
    D_ENTER;
    
-   sprintf(env, "%s=%s", variable, content);
+   snprintf(env, PATH_MAX, "%s=%s", variable, content);
    putenv(env);
 
    D_RETURN;
@@ -96,6 +96,5 @@ e_util_de_url_and_verify(const char *fi)
    if ( !wk )
      D_RETURN_(NULL);
    
-   printf("returning %s\n", wk);
    D_RETURN_(wk);
 }
